tests/ui/const-generics/mgca/type-const-value-type-mismatch.next.stderr
error[E0271]: type mismatch resolving `<A as Array>::LEN == _`
  --> $DIR/type-const-value-type-mismatch.rs:21:5
   |
LL |     fn arr() -> [u8; const { Self::LEN }] {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: the constant `0` is not of type `usize`
  --> $DIR/type-const-value-type-mismatch.rs:18:5
   |
LL |     type const LEN: usize = 0u8;
   |     ^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `u8`

error[E0284]: type annotations needed
  --> $DIR/type-const-value-type-mismatch.rs:21:17
   |
LL |     fn arr() -> [u8; const { Self::LEN }] {}
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer the value of the constant `_`
   |
   = note: cannot satisfy `<A as Array>::arr::{constant#0} == _`

error[E0308]: mismatched types
  --> $DIR/type-const-value-type-mismatch.rs:21:17
   |
LL |     fn arr() -> [u8; const { Self::LEN }] {}
   |        ---      ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `[u8; _]`, found `()`
   |        |
   |        implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0284, E0308.
For more information about an error, try `rustc --explain E0271`.
